--- a/garment/web/src/app/report/sale-report/sale-report.component.html
+++ b/garment/web/src/app/report/sale-report/sale-report.component.html
@@ -751,7 +751,7 @@
                                                             </mat-option>
                                                             <mat-option
                                                                 *ngFor="let val of spec.SptFilterData | productitemfilter: spec.EnteredValue"
-                                                                [value]="val.TableValue">
+                                                                [value]="val.TableValue1">
                                                                 {{val.TableValue}}
                                                             </mat-option>
                                                         </mat-select>
@@ -1672,7 +1672,7 @@
                                                             </mat-option>
                                                             <mat-option
                                                                 *ngFor="let val of spec.SptFilterData | productitemfilter: spec.EnteredValue"
-                                                                [value]="val.TableValue">
+                                                                [value]="val.TableValue1">
                                                                 {{val.TableValue}}
                                                             </mat-option>
                                                         </mat-select>
@@ -2216,7 +2216,7 @@
                                                             </mat-option>
                                                             <mat-option
                                                                 *ngFor="let val of spec.SptFilterData | productitemfilter: spec.EnteredValue"
-                                                                [value]="val.TableValue">
+                                                                [value]="val.TableValue1">
                                                                 {{val.TableValue}}
                                                             </mat-option>
                                                         </mat-select>
