--- a/garment/web/src/app/inventory/inventory-summary/inventory-summary.component.html
+++ b/garment/web/src/app/inventory/inventory-summary/inventory-summary.component.html
@@ -142,7 +142,7 @@
                                                 <mat-option>
                                                 </mat-option>
                                                 <mat-option *ngFor="let val of spec.SptFilterData | proditemfilterPurchase: spec.EnteredValue  "
-                                                    [value]="val.TableValue">
+                                                    [value]="val.TableValue1">
                                                     {{val.TableValue}}
                                                 </mat-option>
                                             </mat-select>
