--- a/garment/web/src/app/inventory/lens-grid-view/lens-grid-view.component.html
+++ b/garment/web/src/app/inventory/lens-grid-view/lens-grid-view.component.html
@@ -150,7 +150,7 @@
                                                 </mat-option>
                                                 <mat-option
                                                     *ngFor="let val of spec.SptFilterData | proditemfilterPurchase: spec.EnteredValue"
-                                                    [value]="val.TableValue">
+                                                    [value]="val.TableValue1">
                                                     {{val.TableValue}}
                                                 </mat-option>
                                             </mat-select>
