--- a/garment/web/src/app/inventory/product-transfer/product-transfer.component.html
+++ b/garment/web/src/app/inventory/product-transfer/product-transfer.component.html
@@ -72,7 +72,7 @@
                                                 <mat-option>
                                                 </mat-option>
                                                 <mat-option *ngFor="let val of spec.SptFilterData | proditemfilterPurchase : spec.EnteredValue  "
-                                                    [value]="val.TableValue">
+                                                    [value]="val.TableValue1">
                                                     {{val.TableValue}}
                                                 </mat-option>
                                             </mat-select>
