--- a/garment/web/src/app/report/customer-return/customer-return.component.html
+++ b/garment/web/src/app/report/customer-return/customer-return.component.html
@@ -314,7 +314,7 @@
                                                             </mat-option>
                                                             <mat-option
                                                                 *ngFor="let val of spec.SptFilterData | productitemfilter: spec.EnteredValue"
-                                                                [value]="val.TableValue">
+                                                                [value]="val.TableValue1">
                                                                 {{val.TableValue}}
                                                             </mat-option>
                                                         </mat-select>
