--- a/garment/web/src/app/sale/customer-return/customer-return.component.html
+++ b/garment/web/src/app/sale/customer-return/customer-return.component.html
@@ -133,7 +133,7 @@
                                                 <mat-option>
                                                 </mat-option>
                                                 <mat-option *ngFor="let val of spec.SptFilterData  | proditemfilterbill: spec.EnteredValue  "
-                                                    [value]="val.TableValue">
+                                                    [value]="val.TableValue1">
                                                     {{val.TableValue}}
                                                 </mat-option>
                                             </mat-select>
