--- a/relinksys/web/src/app/report/sale-report/sale-report.component.css
+++ b/relinksys/web/src/app/report/sale-report/sale-report.component.css
@@ -1,3 +1,9 @@
+.my-chart {
+  width: 100%;  /* कंटेनर की पूरी चौड़ाई लें */
+  height: 450px;
+margin: 0;
+padding: 0;
+}
 .totolRow{
     color: red; 
     font-weight: 600; 
