--- a/relinksys/web/src/app/report/sale-report/sale-report.component.html
+++ b/relinksys/web/src/app/report/sale-report/sale-report.component.html
@@ -3275,9 +3275,9 @@
                                             </div>
                                         </div>
                                     </form>
-                                    <div class="body p-2">
+                                    <div class="body p-4">
                                         <div class="row">
-                                            <div class="col-xl-12 col-lg-12 col-md-12 col-12 mb-0 ">
+                                            <div *ngIf="this.RegisterList.length != 0" class="col-xl-6 col-lg-12 col-md-12 col-12 mb-0 ">
                                                 <div id="ProductExpiry-content" class="col-sm-12"
                                                     style="overflow: auto; height: 450px;">
                                                     <table
@@ -3315,9 +3315,8 @@
                                                     </table>
                                                 </div>
                                             </div>
-                                             <div class="col-xl-12">
-
-
+                                             <div class="col-xl-6">
+                                                <div echarts [options]="chartOptions" [loading]="loading" class="my-chart" ></div>
                                              </div>
                                         </div>
                                     </div>
