--- a/relinksys/web/src/app/report/purchase-report/purchase-report.component.html
+++ b/relinksys/web/src/app/report/purchase-report/purchase-report.component.html
@@ -1388,9 +1388,9 @@
                           </div>
                       </div>
                   </form>
-                  <div class="body p-2">
+                  <div class="body p-4">
                       <div class="row">
-                          <div class="col-xl-12 col-lg-12 col-md-12 col-12 mb-0 ">
+                          <div *ngIf="this.RegisterList.length != 0"  class="col-xl-6 col-lg-6 col-md-12 col-12 mb-0 ">
                               <div id="ProductExpiry-content" class="col-sm-12"
                                   style="overflow: auto; height: 450px;">
                                   <table
@@ -1425,12 +1425,11 @@
                                       </tbody>
                                   </table>
                               </div>
-                              <div class="col-xl-6 col-lg-6 col-md-6 col-12 mb-0 ">
-                                  <div style="width: 100%; height: 400px;">
-                                   
-                                    </div>
-                              </div>
+                              
                           </div>
+                          <div class="col-xl-6">
+                                                <div echarts [options]="chartOptions" [loading]="loading" class="my-chart" ></div>
+                                             </div>
                       </div>
                   </div>
               </div>
