--- a/garment/web/src/app/admin/reminder/reminder.component.html
+++ b/garment/web/src/app/admin/reminder/reminder.component.html
@@ -112,7 +112,7 @@
                                             </table>
                                         </div>
                                     </mat-tab>
-                                    <mat-tab label="Fitter">
+                                    <!-- <mat-tab label="Fitter">
                                         <div class="col-12 " style="overflow: auto; height: 153px; margin-top: 15px;">
                                             <table class="table table-striped table-hover table-sm table-bordered">
                                                 <thead class="thead-light">
@@ -167,7 +167,7 @@
                                                 </tbody>
                                             </table>
                                         </div>
-                                    </mat-tab>
+                                    </mat-tab> -->
                                 </mat-tab-group>
                           </div>
                           </div>
@@ -271,7 +271,7 @@
                                             </table>
                                         </div>
                                     </mat-tab>
-                                    <mat-tab label="Fitter">
+                                    <!-- <mat-tab label="Fitter">
                                         <div class="col-12 " style="overflow: auto; height: 153px; margin-top: 15px;">
                                             <table class="table table-striped table-hover table-sm table-bordered">
                                                 <thead class="thead-light">
@@ -326,7 +326,7 @@
                                                 </tbody>
                                             </table>
                                         </div>
-                                    </mat-tab>
+                                    </mat-tab> -->
                                 </mat-tab-group>
                           </div>
                           </div>
@@ -377,7 +377,7 @@
                       
                        
                         <!-- Eye Testing -->
-                        <div *ngIf="companySetting.IsEyeTesingReminder == 'true'" class="col-xl-4 col-lg-6 mt-3 col-md-12 col-12">
+                        <!-- <div *ngIf="companySetting.IsEyeTesingReminder == 'true'" class="col-xl-4 col-lg-6 mt-3 col-md-12 col-12">
                           <div class="crad bgmE" style="border: 2px solid #ff5100 ; border-radius: 10px; ">
                               <div class="row">
                                   <div class="col-6"> <h1 class="text-center m-0 titalName" >   <img src="../../../assets/images/eyeIcon.png" alt="" srcset="" width="10%"> Eye Testing</h1></div>
@@ -415,10 +415,10 @@
                               </table>
                               </div>
                         </div>
-                        </div>
+                        </div> -->
                         <!-- Eye Testing -->
                          <!-- Solution exp -->
-                         <div *ngIf="companySetting.IsSolutionExpiryReminder == 'true'" class="col-xl-4 col-lg-6 mt-3 col-md-12 col-12">
+                         <!-- <div *ngIf="companySetting.IsSolutionExpiryReminder == 'true'" class="col-xl-4 col-lg-6 mt-3 col-md-12 col-12">
                             <div class="crad bgmS" style="border: 2px solid #ff5100 ; border-radius: 10px; ">
                                 <div class="row">
                                     <div class="col-6"> <h1 class="text-center m-0 titalName" >   <img src="../../../assets/images/eyeSolIcon.png" alt="" srcset="" width="10%"> Solution Expiry</h1></div>
@@ -489,10 +489,10 @@
                                     </mat-tab>
                                 </mat-tab-group>
                           </div>
-                          </div>
+                          </div> -->
                           <!-- solution exp -->
                          <!-- lens exp -->
-                         <div *ngIf="companySetting.IsContactLensExpiryReminder == 'true'" class="col-xl-4 col-lg-6 mt-3 col-md-12 col-12">
+                         <!-- <div *ngIf="companySetting.IsContactLensExpiryReminder == 'true'" class="col-xl-4 col-lg-6 mt-3 col-md-12 col-12">
                             <div class="crad bgmC" style="border: 2px solid #ff5100 ; border-radius: 10px; ">
                                 <div class="row">
                                     <div class="col-6"> <h1 class="text-center m-0 titalName" >   <img src="../../../assets/images/lensIonc.png" alt="" srcset="" width="10%"> Contact Lens Expiry</h1></div>
@@ -563,7 +563,7 @@
                                     </mat-tab>
                                 </mat-tab-group>
                           </div>
-                          </div>
+                          </div> -->
                           <!-- solution exp -->
                    
                         
