--- a/garment/web/src/app/sale/bill/bill.component.html
+++ b/garment/web/src/app/sale/bill/bill.component.html
@@ -66,7 +66,7 @@
                         </mat-error>
                     </mat-form-field>
                 </div>
-                <div class="col-xl-1 col-lg-1 col-md-3 col-4 mb-0 ">
+                <!-- <div class="col-xl-1 col-lg-1 col-md-3 col-4 mb-0 ">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Doctor</mat-label>
                         <mat-select name="Doctor" [(ngModel)]="BillMaster.Doctor" [disabled]="BillMaster.ID !== null"
@@ -80,7 +80,7 @@
                             Select Doctor
                         </mat-error>
                     </mat-form-field>
-                </div>
+                </div> -->
                 <div class="col-xl-1 col-lg-1 col-md-3 col-4 mb-0 ">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Employee</mat-label>
