--- a/garment/web/src/app/product/product-master/product-master.component.html
+++ b/garment/web/src/app/product/product-master/product-master.component.html
@@ -8,7 +8,7 @@
                 <div class="card">
                     <div class="header">
                         <h2>Product Master</h2>
-                        <ul class="header-dropdown m-r--5"> </ul>
+                        <ul class="header-dropdown m-r--5"></ul>
                     </div>
                     <div class="body">
                         <form #f="ngForm" autocomplete="off">
@@ -46,7 +46,7 @@
                                                 </ngx-mat-select-search>
                                             </mat-option>
                                             <mat-option *ngFor="let val of spec.SptFilterData  | prodmasteritemfilter: searchValue  let i = index;"
-                                                [value]="val.TableValue">
+                                                [value]="val.TableValue1">
                                                 {{val.TableValue}}
                                             </mat-option>
                                         </mat-select>
