--- a/garment/web/src/app/report/expense/expense.component.html
+++ b/garment/web/src/app/report/expense/expense.component.html
@@ -318,9 +318,9 @@
                                             </div>
                                         </div>
                                     </form>
-                                    <div class="body p-2">
+                                    <div class="body p-4">
                                         <div class="row">
-                                            <div class="col-xl-12 col-lg-12 col-md-12 col-12 mb-0 ">
+                                            <div *ngIf="this.RegisterList.length != 0" class="col-xl-6 col-lg-6 col-md-12 col-12 mb-0 ">
                                                 <div  class="col-sm-12"
                                                     style="overflow: auto; height: 450px;">
                                                     <table
@@ -355,6 +355,9 @@
                                                     </table>
                                                 </div>
                                             </div>
+                                             <div class="col-lg-6">
+                                    <div echarts [options]="chartOptions" [loading]="loading" class="my-chart" ></div>
+                                </div>
                                         </div>
                                     </div>
                                 </div>
