--- a/garment/web/src/app/sale/bill-list/bill-list.component.html
+++ b/garment/web/src/app/sale/bill-list/bill-list.component.html
@@ -160,9 +160,9 @@
                               <mat-icon class="edit_icon ms-1">attach_money </mat-icon>
                             </button>
                             <div class="button-container" *ngIf="this.id != '0'">
-                              <button class="bg-none">
+                              <!-- <button class="bg-none">
                                 <mat-icon class="edit_icon pt-1 ms-1">remove_red_eye</mat-icon>
-                              </button>
+                              </button> -->
                               <div class="hover-box">
                                 <table id="table2" style="width: 100%;">
                                   <thead>
