--- a/garment/web/src/app/admin/reminder/reminder.component.html
+++ b/garment/web/src/app/admin/reminder/reminder.component.html
@@ -332,7 +332,7 @@
                           </div>
                           <!-- Anniversary -->
                           <!-- Customer Order Pending -->
-                          <div *ngIf="companySetting.IsCustomerOrderPendingReminder == 'true'" class="col-xl-4 col-lg-6 mt-3 col-md-12 col-12">
+                          <!-- <div *ngIf="companySetting.IsCustomerOrderPendingReminder == 'true'" class="col-xl-4 col-lg-6 mt-3 col-md-12 col-12">
                             <div class="crad bgmO" style="border: 2px solid #ff5100 ; border-radius: 10px; ">
                                 <div class="row">
                                     <div class="col-6"> <h1 class="text-center m-0 titalName" >   <img src="../../../assets/images/orderIcon.png" alt="" srcset="" width="10%"> Cust_Order Pending</h1></div>
@@ -372,7 +372,7 @@
                                 </table>
                                 </div>
                           </div>
-                          </div>
+                          </div> -->
                           <!-- Customer Order Pending -->
                       
                        
@@ -568,7 +568,7 @@
                    
                         
                            <!-- Comfort Feedback -->
-                        <div *ngIf="companySetting.IsComfortFeedBackReminder == 'true'" class="col-xl-4 col-lg-6 mt-3 col-md-12 col-12">
+                        <!-- <div *ngIf="companySetting.IsComfortFeedBackReminder == 'true'" class="col-xl-4 col-lg-6 mt-3 col-md-12 col-12">
                             <div class="crad bgmCo" style="border: 2px solid #ff5100 ; border-radius: 10px; ">
                                 <div class="row">
                                     <div class="col-6"> <h1 class="text-center m-0 titalName" >   <img src="../../../assets/images/conFortIcon.png" alt="" srcset="" width="10%"> Comfort Feedback</h1></div>
@@ -606,10 +606,10 @@
                                 </table>
                                 </div>
                           </div>
-                          </div>
+                          </div> -->
                           <!-- Comfort Feedback -->
                            <!-- Service Msg -->
-                        <div *ngIf="companySetting.IsServiceReminder == 'true'" class="col-xl-4 col-lg-6 mt-3 col-md-12 col-12">
+                        <!-- <div *ngIf="companySetting.IsServiceReminder == 'true'" class="col-xl-4 col-lg-6 mt-3 col-md-12 col-12">
                             <div class="crad bgmSM" style="border: 2px solid #ff5100 ; border-radius: 10px; ">
                                 <div class="row">
                                     <div class="col-6"> <h1 class="text-center m-0 titalName" >   <img src="../../../assets/images/serviceIcon.png" alt="" srcset="" width="10%"> Service Msg</h1></div>
@@ -647,7 +647,7 @@
                                 </table>
                                 </div>
                           </div>
-                          </div>
+                          </div> -->
                           <!-- Service Msg -->
                         </div>
                     </div>
