--- a/garment/api/views/barcode.ejs
+++ b/garment/api/views/barcode.ejs
@@ -205,7 +205,7 @@
             <%}%>
 
             <% if (data.CompanyBarcode == 4){%> 
-                <table style="margin-left: -10px; margin-top: -9px; width:100%;">
+                <!-- <table style="margin-left: -10px; margin-top: -9px; width:100%;">
                  <tr>
                         <th  style="width: 250px; padding: 0;width:100%;zoom:74%">
                             <div
@@ -233,13 +233,47 @@
                                 MRP  <%=i.RetailPrice%>  
                               <%}%>         
                         </div>
-                       
                         </th>
-                      
                     </tr>
-               
-                     
-               
+                </table> -->
+
+                 <table style="margin-left: 0px; margin-top: -9px; width:100%; text-align: center;">
+                 <tr>
+                        <th  style="width: 250px; padding: 0;width:100%;zoom:80%">
+                            <div
+                                style="font-size: 24px; font-weight: 600; font-family: verdana;margin-top: 0px; text-align: center; margin-top:6px; padding-bottom:1px; ">
+                                ZARA
+                            </div>
+                            <div
+                                style="font-size: 16px; font-weight: 600; font-family: verdana;margin-top: 0px; text-align: center; margin-top:6px; padding-bottom:1px; ">
+                                <%=i.BarcodeName%>
+                            </div>
+
+                            <div>
+                                <svg class="barcode" jsbarcode-format="CODE128" jsbarcode-value="<%=i.Barcode%>"
+                                    jsbarcode-textmargin="0" jsbarcode-height="50" jsbarcode-marginTop="-15"
+                                    jsbarcode-fontSize="18" jsbarcode-marginBottom="0" jsbarcode-width="2"
+                                    jsbarcode-fontoptions="bold">
+                                </svg>
+                                <script>
+                                    JsBarcode(".barcode").init();
+                                </script>
+                            </div>
+
+                            <div style="text-align: center; font-size: 12px; font-weight: 600; font-family: verdana; margin-top: -5px;">
+                                <%=i.ProductFullName%>
+                           </div>
+
+                            <div style="text-align: center; font-size: 20px; font-weight: 600; font-family: verdana; letter-spacing: 0px;margin-top: 2px; margin-bottom: 2px;">
+                                <% if (data.MRPHide == 'true' ){%>
+                                    MRP  <%=i.RetailPrice%>  
+                                <%}%>         
+                            </div>
+                            <div style="text-align: center; font-size: 12px; font-weight: 600; font-family: verdana; letter-spacing: 0px; ">
+                                <%=i.ShopAddress%> 
+                        </div>
+                        </th>
+                    </tr>
                 </table>
             <%}%>
 
