--- a/relinksys/web/src/app/uploader/purchase-bluk/purchase-bluk.component.html
+++ b/relinksys/web/src/app/uploader/purchase-bluk/purchase-bluk.component.html
@@ -304,7 +304,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" [disabled]="!f22.valid" (click)="processFile()" mat-raised-button
+                <button type="button" [disabled]="!f22.valid" (click)="processFile1()" mat-raised-button
                     color="primary">Process File</button>
             </div>
         </form>
