--- a/relinksys/web/src/app/admin/sms-setting/sms-setting.component.html
+++ b/relinksys/web/src/app/admin/sms-setting/sms-setting.component.html
@@ -113,7 +113,7 @@
 
                                                         <th style="text-align: left; padding-left: 0%;" width="64%">
                                                             Message Text (%26 = &)</th>
-                                                        <th>
+                                                        <th *ngIf="this.company == 1">
                                                             upload Img
                                                         </th>
                                                     </tr>
@@ -129,7 +129,7 @@
                                                                 [ngModelOptions]="{standalone: true}" autocomplete="off"
                                                                 required>
                                                         </td>
-                                                        <td style="width:1%">
+                                                        <td *ngIf="this.company == 1" style="width:1%">
                                                             <div class="row">
                                                                 <div class="col-3  ">
                                                                     <img class="fit-picture" width="50" height="50"
