--- a/relinksys/web/src/app/report/purchase-report/purchase-report.component.html
+++ b/relinksys/web/src/app/report/purchase-report/purchase-report.component.html
@@ -405,6 +405,16 @@
                           </mat-select>
                         </mat-form-field>
                       </div>
+
+                      <div class="col-xl-2 col-lg-2 col-md-4 col-6 mb-0">
+                        <mat-form-field class="example-full-width mb-0">
+                          <mat-label>Barcode</mat-label>
+                          <input matInput name="Barcode" [(ngModel)]="PurchaseDetail.BaseBarCode" #Barcodecontrol>
+                          <mat-error>
+                            Barcode required
+                          </mat-error>
+                        </mat-form-field>
+                      </div>
                       <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-0 ">
                         <button class="me-2" type="submit" mat-raised-button color="primary">
                           Search
