--- a/relinksys/web/src/app/report/sale-report/sale-report.component.html
+++ b/relinksys/web/src/app/report/sale-report/sale-report.component.html
@@ -856,6 +856,15 @@
                                                     </mat-select>
                                                 </mat-form-field>
                                             </div>
+                                            <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0">
+                        <mat-form-field class="example-full-width mb-0">
+                          <mat-label>Barcode</mat-label>
+                          <input matInput name="Barcode" [(ngModel)]="Billdetail.Barcode" #Barcodecontrol>
+                          <mat-error>
+                            Barcode required
+                          </mat-error>
+                        </mat-form-field>
+                      </div>
                                             <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-0 ">
                                                 <button class="me-3" type="submit" mat-raised-button color="primary">
                                                     Search
